...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceOneClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
...

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/shuffle"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:onClick="shuffleButtonClickHandler"
            android:text="Shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton15" />

    </LinearLayout>

...
